--- a/sloth-bday/index.html
+++ b/sloth-bday/index.html
@@ -10,7 +10,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="樹懶 生日快樂！" />
   <meta property="og:description" content="倒數 3, 2, 1 → 樹懶吹蠟燭＋Soda Pop＋禮物驚喜＋彩帶！" />
-  <meta property="og:image" content="https://joyceweng.github.io/sloth-bday/assets/slothpng" />
+  <meta property="og:image" content="https://joyceweng.github.io/sloth-bday/assets/sloth.png" />
   <meta property="og:url" content="https://joyceweng.github.io/sloth-bday/" />
   <meta name="twitter:card" content="summary_large_image" />
 
