--- a/sloth-bday/index.html
+++ b/sloth-bday/index.html
@@ -14,7 +14,7 @@
   <meta property="og:url" content="https://joyceweng.github.io/sloth-bday/" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <link rel="icon" href="assets/og-sloth-bday.png" />
+  <link rel="icon" href="assets/sloth.png" />
   <link rel="preload" as="audio" href="assets/soda-pop.mp3">
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
