--- a/sloth-bday/index.html
+++ b/sloth-bday/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>樹懶生日驚喜 🎉</title>
-  <meta name="description" content="倒數 3、2、1 → 樹懶吹蠟燭 + 播放 Soda Pop + 禮物盒驚喜 + 彩帶！" />
+  <!-- <meta name="description" content="倒數 3、2、1 → 樹懶吹蠟燭 + 播放 Soda Pop + 禮物盒驚喜 + 彩帶！" /> -->
 
   <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="樹懶 生日快樂！" />
-  <meta property="og:description" content="倒數 3, 2, 1 → 樹懶吹蠟燭＋Soda Pop＋禮物驚喜＋彩帶！" />
+  <!-- <meta property="og:description" content="倒數 3, 2, 1 → 樹懶吹蠟燭＋Soda Pop＋禮物驚喜＋彩帶！" /> -->
   <meta property="og:image" content="https://joyceweng.github.io/sloth-bday/assets/sloth.png" />
   <meta property="og:url" content="https://joyceweng.github.io/sloth-bday/" />
   <meta name="twitter:card" content="summary_large_image" />
